k8s/svc.yaml
apiVersion: v1
kind: Service

metadata:
  name: aks-demo-app

spec:
  type: LoadBalancer

  selector:
    app: aks-demo-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
