k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: aks-demo-app-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: app.local
      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: aks-demo-app
                port:
                  number: 80

    # - host: www.sarajs.in
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix

    #         backend:
    #           service:
    #             name: aks-demo-app
    #             port:
    #               number: 80
